force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient2__c/Apttus_DocuApi__DocuSignDefaultRecipient2__c.object-meta.xml
<CustomObject>
    <description>Holds the default recipients for e-signature.</description>
    <label>DocuSign Recipient</label>
    <nameField>
        <displayFormat>DSDR-{0000000}</displayFormat>
        <label>Recipient Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>