force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient2__c/fields/Apttus_CMDSign__AgreementId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMDSign__AgreementId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated agreement</description>
    <inlineHelpText>ID of the associated agreement</inlineHelpText>
    <label>Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipName>DocuSignDefaultRecipients2</relationshipName>
    <type>Lookup</type>
</CustomField>