force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient2__c/fields/Apttus_DocuApi__AccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DocuSign Recipients</relationshipLabel>
    <relationshipName>DocuSign_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>