force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient2__c/fields/Apttus_DocuApi__ContactId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the contact recipient</description>
    <inlineHelpText>ID of the contact recipient</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>DocuSignDefaultRecipients2</relationshipName>
    <type>Lookup</type>
</CustomField>