force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient2__c/fields/Apttus_DocuApi__EmailTemplateUniqueName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__EmailTemplateUniqueName__c</fullName>
    <description>The &quot;Template Unique Name&quot; for the Salesforce text email template that needs to be used for the email subject and email body for the recipient. Only &quot;Text&quot; template type is supported.</description>
    <inlineHelpText>The &quot;Template Unique Name&quot; for the Salesforce text email template that needs to be used for the email subject and email body for the recipient. Only &quot;Text&quot; template type is supported.</inlineHelpText>
    <label>Email Template Unique Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>