force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient2__c/fields/Apttus_DocuApi__FirstName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__FirstName__c</fullName>
    <description>Recipient First Name</description>
    <inlineHelpText>Recipient First Name</inlineHelpText>
    <label>Recipient First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>