force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient2__c/fields/Apttus_DocuApi__IsTransient__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__IsTransient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates a transient recipient record that may get deleted by the user. A new recipient is in transient state until the recipient is explicitly saved by the user. A new recipient is created by new and clone methods. Workflow rules should check this field to test for false before firing so that rules are not incorrectly fired when transient recipients are created .</description>
    <inlineHelpText>Indicates a transient recipient that may get deleted by the user. A new recipient is in transient state until the recipient is explicitly saved by the user.</inlineHelpText>
    <label>IsTransient</label>
    <type>Checkbox</type>
</CustomField>