force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient2__c/fields/Apttus_DocuApi__LastName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__LastName__c</fullName>
    <description>Recipient Last Name</description>
    <inlineHelpText>Recipient Last Name</inlineHelpText>
    <label>Recipient Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>