force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient2__c/fields/Apttus_DocuApi__Note__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__Note__c</fullName>
    <description>Note for the individual recipient</description>
    <inlineHelpText>Note for the individual recipient</inlineHelpText>
    <label>Note</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>