force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient2__c/fields/Apttus_DocuApi__ReadOnlyEmail__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__ReadOnlyEmail__c</fullName>
    <description>Email</description>
    <formula>IF( (ISBLANK(Apttus_DocuApi__SigningGroupId__c )) ,
IF( (ISBLANK(Apttus_DocuApi__ContactId__c )) ,
IF( (ISBLANK( Apttus_DocuApi__UserId__c )) , Apttus_DocuApi__Email__c
, Apttus_DocuApi__UserId__r.Email

),
Apttus_DocuApi__ContactId__r.Email
),
$Label.Apttus_DocuApi__SigningGroupEmailPlaceholder
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Email</inlineHelpText>
    <label>Email</label>
    <type>Text</type>
</CustomField>