force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient2__c/fields/Apttus_DocuApi__ReadOnlyFirstName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__ReadOnlyFirstName__c</fullName>
    <formula>IF( (ISBLANK(Apttus_DocuApi__SigningGroupId__c )) ,
IF( (ISBLANK(Apttus_DocuApi__ContactId__c )) ,
IF( (ISBLANK( Apttus_DocuApi__UserId__c )) , Apttus_DocuApi__FirstName__c
, Apttus_DocuApi__UserId__r.FirstName

),
Apttus_DocuApi__ContactId__r.FirstName
),
Apttus_DocuApi__SigningGroupId__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name</label>
    <type>Text</type>
</CustomField>