force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient2__c/fields/Apttus_DocuApi__RoleName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__RoleName__c</fullName>
    <description>Role names are used to map the anchor tags within your documents to a recipient. Each role name must be entered on a separate line. Order of the role name determines which anchor tag set to map to. The first role in the list will map to the &apos;1&apos; tags within the document, second role to the &apos;2&apos; tags, etc. Example: If the first role is &apos;Signer 1&apos;, the recipient tied to the role will map to the \s1\, \i1\ etc. tags in the documents.</description>
    <inlineHelpText>Role names are used to map the anchor tags within your documents to a recipient. Order of the role name determines which anchor tag set to map to.</inlineHelpText>
    <label>Role Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Apttus_DocuApi__RecipientType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Signer 1</fullName>
            </value>
            <value>
                <fullName>Signer 2</fullName>
            </value>
            <value>
                <fullName>Signer 3</fullName>
            </value>
            <value>
                <fullName>Signer 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>