force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient2__c/fields/Apttus_DocuApi__SigningGroupId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__SigningGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the signing group recipient</description>
    <inlineHelpText>ID of the signing group recipient</inlineHelpText>
    <label>Signing Group</label>
    <referenceTo>Apttus_DocuApi__DocuSignSigningGroup__c</referenceTo>
    <relationshipLabel>DocuSign Recipients</relationshipLabel>
    <relationshipName>DocuSignRecipients</relationshipName>
    <type>Lookup</type>
</CustomField>