force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient2__c/fields/Apttus_DocuApi__UserId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the user recipient</description>
    <inlineHelpText>ID of the user recipient</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DocuSignDefaultRecipients2</relationshipName>
    <type>Lookup</type>
</CustomField>