force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient2__c/fields/Apttus_QPDSign__ProposalId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPDSign__ProposalId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated quote or proposal</description>
    <inlineHelpText>ID of the associated quote or proposal</inlineHelpText>
    <label>Quote/Proposal</label>
    <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
    <relationshipName>DocuSignDefaultRecipients2</relationshipName>
    <type>Lookup</type>
</CustomField>