force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient2__c/recordTypes/Apttus_DocuApi__Email.recordType-meta.xml
<RecordType>
    <fullName>Apttus_DocuApi__Email</fullName>
    <active>true</active>
    <description>Manually entered recipient information</description>
    <label>Email</label>
</RecordType>