force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient2__c/recordTypes/Apttus_DocuApi__SigningGroup.recordType-meta.xml
<RecordType>
    <fullName>Apttus_DocuApi__SigningGroup</fullName>
    <active>true</active>
    <description>DocuSign Signing Group</description>
    <label>Signing Group</label>
</RecordType>